--- a/drf_api/Procfile
+++ b/drf_api/Procfile
@@ -1,3 +1,4 @@
-release: python manage.py makemigrations && python manage.py migrate
- web: gunicorn productivity_app.wsgi --log-file -
+release: python manage.py makemigrations && python manage.py migrate 
+
+web: gunicorn drf_api.wsgi
  
